# t3dmium

./: .gitignore  BUILDING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  INSTALL.md  LICENSE  NOTICE  PRIVACY.md  README.md  domain_regex.list  domain_substitution.list  downloads.ini  flags.gn  pruning.list
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  privacy_leak.md
.github/workflows/: pr-check.yml  release-build.yml
audit/: README.md  allowlist.json  audit.py  capture.py  checker.py  requirements.txt
audit/fixtures/: clean_run.json  leaky_run.json
audit/scenarios/: __init__.py  driver.py
audit/tests/: test_checker.py
branding/: README.md  generate_icons.sh
docs/: privacy-features.md  why-privacy-first.md
docs/adr/: 0001-fork-model-patchset-not-vendored.md  0002-chromium-pin-follows-ungoogled-chromium.md  0003-attribution-and-licensing.md  0004-single-repo-with-platforms-dir.md  0005-adblock-engine.md  0006-self-hosted-encrypted-sync.md
patches/: series
patches/branding/: rename-product-to-t3dmium.patch
patches/degoogle/upstream-fixes/: missing-dependencies.patch
patches/features/: README.md
patches/privacy/: README.md  enable-do-not-track-by-default.patch
sync/: Dockerfile  PROTOCOL.md  README.md  docker-compose.yml  requirements.txt
sync/client/: reference_client.py
sync/server/: app.py
sync/tests/: test_sync.py
tools/: _common.py  _deps.py  apply_patches.py  build.py  check_conventions.py  fetch.py  validate_patches.py
(+110 files in other folders)
