# GN build arguments. tools/build.py copies this file verbatim to
# build/src/out/Default/args.gn and runs `gn gen --fail-on-unused-args`.
#
# The block below is adopted verbatim from ungoogled-chromium (BSD-3-Clause,
# The ungoogled-chromium Authors), tag 150.0.7871.46-1, flags.gn.
chrome_pgo_phase=0
clang_use_chrome_plugins=false
disable_fieldtrial_testing_config=true
enable_hangout_services_extension=false
enable_mdns=false
enable_remoting=false
enable_reporting=false
enable_service_discovery=false
enable_widevine=true
exclude_unwind_tables=true
google_api_key=""
google_default_client_id=""
google_default_client_secret=""
safe_browsing_mode=0
treat_warnings_as_errors=false
use_official_google_api_keys=false
use_unofficial_version_number=false
v8_drumbrake_bounds_checks=true

# T3dmium additions.
is_official_build=true
symbol_level=0
blink_symbol_level=0
proprietary_codecs=true
ffmpeg_branding="Chrome"
